--- a/app/views/gobierto_admin/gobierto_participation/processes/polls/_form.html.erb
+++ b/app/views/gobierto_admin/gobierto_participation/processes/polls/_form.html.erb
@@ -4,6 +4,20 @@
   <div class='pure-g'>
     <div class='pure-u-1 pure-u-md-16-24'>
 
+      <% if !@poll_form.editable? %>
+        <div class='flash notice' data-behavior='disable_editable_components'>
+          <p><%= t('.poll_has_votes') %><p>
+          <p><%= t('.received_answers_html', answers: @poll_form.unique_answers_count, predicted_answers: @poll_form.predicted_unique_answers_count, link_url: new_gobierto_participation_process_poll_answer_path(@poll_form.process.slug, @poll_form)) %><p>
+          <p><%= t('.results_info') %><p>
+        </div>
+      <% end %>
+
+      <% if @poll_form.results_available? %>
+        <div class='flash notice' data-behavior='disable_editable_components'>
+          <p><%= t('.poll_ended_html', link_url: admin_participation_process_poll_answers_path(@poll_form.process, @poll_form)) %></p>
+        </div>
+      <% end %>
+
       <div class='globalized_fields'>
         <%= render 'gobierto_admin/shared/form_locale_switchers' %>
 
